# Whitted-RT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Res/: CornellBox-Original.mtl  CornellBox-Sphere.mtl
Src/: Raytracer.cpp  Raytracer.h  main.cpp
Src/Camera/: Camera.cpp  Camera.h
Src/Exception/: ParseException.h
Src/Image/: Image.cpp  Image.h  toojpeg.h
Src/Scene/: Light.h  Material.h  Scene.cpp  Scene.h  Shape.h
Src/Utility/: Math.h  Random.h  SmoothingNormals.h
